syntax = "proto3";
package mathing;

import "pagination.proto";
import "item_row.proto";

message ItemGetRequest {
  repeated string targets = 1;
  PaginationRequest pagination = 2;
}

message ItemGetResponse {
  repeated ItemRow items = 1;
  PaginationResponse pagination = 2;
}
